# SampleClaw

./: CMakeLists.txt  CONTRIBUTING.md  README.md  setup.py
assets/: architecture.mmd
docs/: README.md
examples/: basic_agent.py
include/: ECS.hpp  Engine.hpp
sampleclaw/: factory.py
sampleclaw/core/: agent.py
sampleclaw/memory/: long_term_memory.py  short_term_memory.py
sampleclaw/safety/: safety_mechanisms.py
sampleclaw/skills/: example_skills.py  skill_manager.py
src/: Engine.cpp  main.cpp
